--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
 			<version>4.1.6.RELEASE</version>
 		</dependency>
  
+		<!-- https://mvnrepository.com/artifact/org.codehaus.sonar/sonar-maven-plugin -->
+       <dependency>
+    <groupId>org.codehaus.sonar</groupId>
+    <artifactId>sonar-maven-plugin</artifactId>
+    <version>5.1</version>
+       </dependency>
 		
 		<dependency>
 			<groupId>org.springframework</groupId>
